# ilqr_for_inverted_pendulumn

ilqr_inverted_pendulumn/: CMakeLists.txt  package.xml
ilqr_inverted_pendulumn/config/: cartpole_gazebo_control.yaml  catpole_visulize.rviz
ilqr_inverted_pendulumn/include/: cartpole_dyn.h  loss_function.h  types.h
ilqr_inverted_pendulumn/launch/: cartpole_visaulize.launch
ilqr_inverted_pendulumn/src/: SLQ.cpp  cartpole_test.cpp  loss_function.cpp
ilqr_inverted_pendulumn/urdf/: cartpole.urdf
